# agent-eval

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  TASTE.md  pyproject.toml
.github/workflows/: test.yml
agent_eval/: __init__.py  checks.py  cli.py  config.py  journal.py  memory.py  reliance.py  score.py  scorecard.py  storage.py  suite.py  texture.py
agent_eval/adapters/: __init__.py  base.py  files.py  hermes.py  http.py  mock.py  openclaw.py  shell.py
configs/: hermes.yaml  mock.yaml  openclaw.yaml  shell-example.yaml
docs/: framework-comparison.md  frameworks.md  harness.md  proposal.md  references.md  scorecard.md  tenure-protocol.md  tenure.md
probes/: memory-probes.md  memory.yaml  texture-probes.md  texture.md  texture.yaml
scenarios/: suite.md  suite.yaml
scorecards/: template.md
tests/: test_assets_and_cli.py  test_checks.py  test_memory.py  test_reliance.py  test_score.py  test_scorecard.py  test_suite.py
