[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "0.1.0"
description = "Runnable harness for the coworker eval: scenario suite (pass^k), memory probes (durability paired with discrimination), texture probes, and calibrated-reliance scoring across tenure states."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[tool.setuptools.packages.find]
include = ["agent_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
